--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,13 +14,13 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js v22.17.1
+      - name: Setup Node.js v22.21.1
         uses: actions/setup-node@v3
         with:
-          node-version: '22.17.1'
+          node-version: "22.21.1"
           registry-url: https://npm.fontawesome.com/
-          scope: '@fortawesome'
-          cache: 'npm'
+          scope: "@fortawesome"
+          cache: "npm"
 
       - name: Install Node Dependencies
         run: npm ci
