--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:coverage-report": "serve ./coverage/lcov-report -p 3001 --config ../../serve.json",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "lint": "next lint",
+    "lint": "eslint .",
     "validate": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -23,61 +23,62 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^7.0.1",
-    "@fortawesome/free-brands-svg-icons": "^7.0.1",
-    "@fortawesome/pro-light-svg-icons": "^7.0.1",
-    "@fortawesome/pro-solid-svg-icons": "^7.0.1",
-    "@fortawesome/react-fontawesome": "^3.0.2",
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/pro-light-svg-icons": "^7.1.0",
+    "@fortawesome/pro-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.0",
     "@gsap/react": "^2.1.2",
-    "@next/bundle-analyzer": "^15.5.2",
-    "@prismicio/client": "^7.20.1",
-    "@prismicio/next": "^2.0.1",
-    "@prismicio/react": "^3.2.1",
-    "@sentry/nextjs": "^10.10.0",
+    "@next/bundle-analyzer": "^16.0.3",
+    "@prismicio/client": "^7.21.0",
+    "@prismicio/next": "^2.0.2",
+    "@prismicio/react": "^3.2.2",
+    "@sentry/nextjs": "^10.26.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
-    "next": "^15.5.2",
+    "next": "^16.0.3",
     "next-transition-router": "^0.2.11",
-    "node-mailjet": "^6.0.9",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "typescript": "^5.9.2",
+    "node-mailjet": "^6.0.11",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "typescript": "^5.9.3",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.35.0",
-    "@slicemachine/adapter-next": "^0.3.83",
+    "@eslint/js": "^9.39.1",
+    "@slicemachine/adapter-next": "^0.3.86",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/postcss": "^4.1.13",
+    "@tailwindcss/postcss": "^4.1.17",
     "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.3.1",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
-    "autoprefixer": "^10.4.21",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3",
+    "autoprefixer": "^10.4.22",
+    "babel-plugin-react-compiler": "^1.0.0",
     "concurrently": "^9.2.1",
-    "eslint": "^9.35.0",
-    "eslint-config-next": "^15.5.2",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.3",
     "eslint-config-prettier": "^10.1.8",
     "eslint-config-typescript": "^3.0.0",
-    "eslint-plugin-jest": "^29.0.1",
+    "eslint-plugin-jest": "^29.1.0",
     "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-prettier": "^5.5.4",
-    "eslint-plugin-testing-library": "^7.6.8",
-    "eslint-plugin-unicorn": "^61.0.2",
-    "jest": "^30.1.3",
-    "jest-environment-jsdom": "^30.1.2",
+    "eslint-plugin-testing-library": "^7.13.4",
+    "eslint-plugin-unicorn": "^62.0.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.14",
-    "slice-machine-ui": "^2.18.1",
-    "tailwindcss": "^4.1.13",
+    "prettier-plugin-tailwindcss": "^0.7.1",
+    "slice-machine-ui": "^2.19.1",
+    "tailwindcss": "^4.1.17",
     "ts-node": "^10.9.2",
-    "typescript-eslint": "^8.43.0"
+    "typescript-eslint": "^8.47.0"
   }
 }
